--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ folly/m4/ltversion.m4
 folly/m4/lt~obsolete.m4
 folly/generate_fingerprint_tables
 folly/FingerprintTables.cpp
+
+.idea/*
+.vscode/*
+cmake-build-debug/*
